--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin-top: 1.0em;
       background-color: #eee;
       font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #ffffff;
+      color: #333;
     }
     #container {
       margin: 0 auto;
@@ -21,7 +21,7 @@
     h1 a { text-decoration: none }
     h2 { font-size: 1.5em; color: #333; }
     h3 { text-align: center; color: #333; }
-    a { color: #f16efb; }
+    a { color: blue; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
     pre { background: #000; color: #fff; padding: 15px;}
