--- a/createnewstory.html
+++ b/createnewstory.html
@@ -3,6 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css" />
+	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap-responsive.css" />
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
