--- a/story_tile_add_comments.html
+++ b/story_tile_add_comments.html
@@ -21,7 +21,7 @@
 		background-color: #DDD;
 	}
 	.main-section-footer img{
-		padding: 5px 10px;		
+		margin: 5px 10px;		
 	}
 	#story-title{
 		text-align:center;
@@ -56,6 +56,7 @@
 	img.img-in-canvas{
 		width:20px;
 		height:20px;
+		padding:5px;
 	}
 	#canvas-area{
 		margin-left:20px;
@@ -102,7 +103,7 @@
 					<img src='img/undo.png' />
 					<img src='img/copy.png' />
 					<img src='img/comments.png' />
-					
+					<img src='img/tag.png' />
 				</div>
 			</div>
 			
