can delete a tile, clone a tile

--- a/story_tile.html
+++ b/story_tile.html
@@ -115,6 +115,7 @@
 					<img src='img/save.png' id='save'/>
 					<img src='img/undo.png' />
 					<img src='img/copy.png' id='copy'/>
+					<img src='img/delete.png' id='delete'/>
 					<img src='img/comments.png' />
 					<img src='img/tag.png' />
 				</div>
