--- a/story_home_page_new_story.html
+++ b/story_home_page_new_story.html
@@ -44,7 +44,7 @@
 </head>
 <body>
 	<div class='container'>
-		<div id='story-title' contenteditable='true'> Untitled Story</div>
+		<div id='story-title'> Untitled Story</div>
 		<div class='main-section'>
 			<h4>Start your Story by choosing one of the images</h4>
 			<div class='img-wrapper'>
@@ -70,20 +70,22 @@
 <script type="text/javascript" src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'></script>
 <script type="text/javascript">
 	$(document).ready(function(){
+		// set story name from local storage
+		var so = localStorage.getItem('storyObject') || JSON.stringify({});
+		so = JSON.parse(so);
+		$('#story-title').html(so.storyName || 'Story Name');
 		$('.img-wrapper').on("click", "img", function(event){
-			var so = localStorage.getItem('storyObject');
 			var imgSrc = event.target.getAttribute('src');
 			var tileObject = {imgSrc:'', question:'', answer:'', prompt:'', comments:'', notes:'', tileId:''};
 			console.log(so);
-			if(so){
-				so = JSON.parse(so);
+			if(!$.isEmptyObject(so)){
 				tileObject.imgSrc = imgSrc;
 				tileObject.tileId = so.tiles.length;
 				so.currentTileId = so.tiles.length;
 				so.tiles.push(tileObject);
 				localStorage.setItem('storyObject', JSON.stringify(so));
 			}else{
-				so = {tiles:[], currentTileId:0};
+				so = {tiles:[], currentTileId:0, storyName:'Story Name', deletedTiles:[]};
 				tileObject.imgSrc = imgSrc;
 				tileObject.tileId = 0;
 				so.tiles.push(tileObject);
