Adding bug fixes on App Home page and Story tile. Adding Select Student to Answer page. Re-organizing JS code

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 				Story Tile Create Page
 			</div>
 		</a>
-		<a href='story_home_page_all_tiles.html'>
+		<a href='story_home_page.html'>
 			<div class='link'>
-				Story Home Page with All Tiles
+				Story Home Page 
 			</div>
 		</a>
 	</div>
