--- a/story_home_page.html
+++ b/story_home_page.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!--<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css" />-->
-	<link rel="stylesheet" type="text/css" href="css/index.css" />
-	<link rel="stylesheet" type="text/css" href="css/default.css" />
-	<style type="text/css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css" />
+-->
+<link rel="stylesheet" type="text/css" href="css/index.css" />
+<link rel="stylesheet" type="text/css" href="css/default.css" />
+<style type="text/css">
 	
 	.container{
 		position: relative;
 	}
 	.main-section{
 		width:100%;
-		height:100%;
+		height:auto;
+		border:none;
+		padding-top: 50px;
 	}
 	.main-section-footer{
 		bottom:0px;
@@ -33,15 +36,19 @@
 		height: 25px;
 		padding: 5px;
 		background-color: #eee;
+		/* removing toolbar for now */
+		display: none;
+
 	}
 	.toolbar img{
 		float:left;
-		margin-right:50px;
+		margin-right:30px;
 		cursor: pointer;
 	}
 	.toolbar-content{
 		margin: 0 auto;
-
+		margin: 0 auto;
+		width:555px;
 	}
 	.canvas{
 		float:left;
@@ -111,60 +118,119 @@
 	#question, #answer, #prompt{
 		height:40px;
 	}
-	.right-icons{
+	/*.right-icons{
 		float:right;
 		width:65px;
 	}
 	.right-icons img{
 		padding:5px 5px 0 0;
-	}
+	}*/
 	.current-tile{
 		border:1px solid #057ebd;
 	}
-	
+	.autocomplete{
+		background-color: #eee;
+		border:1px solid #aaa;
+		width:260px;
+		margin-left:240px;
+		display: none;
+		margin-top:-5px;
+		position: absolute;
+		z-index:5;
+	}
+	.autocomplete div:nth-child(odd){
+		background-color: #ccc;
+
+	}
+	.autocomplete-element{
+		font-size:1.2em;
+		padding: 5px;
+		cursor: pointer;
+	}
+	.selected-students-container{
+		/*border: 1px solid #efefef;*/
+		width:690px;
+		margin:0 auto 0 200px;
+		clear: both;
+	}
+	.selected-student{
+		float:left;
+		width:100px;
+		height:80px;
+		margin-top:-10px;
+		position: relative;
+		margin-bottom:15px;
+	}
+	.selected-student span{
+		text-align:center;
+		font-size:1.2em;
+		word-wrap: break-word;
+		display: block;
+		top:70px;
+		position: absolute;
+		width:100%;
+	}
+	.btn-custom a{
+		color:white;
+	}
 	</style>
 </head>
 <body>
-	<div class='container'>
-		<div class='main-section'>
-			<div class='right-icons'>
-				<a href='/avaz-project/app_home_screen.html'><img src='img/home.png' class='home'/></a>
-				<img src='img/help.png' class='settings'/>
-			</div>
-		
-			<div class='toolbar'>
-				<div class='toolbar-content'>
-					<!--<img src='img/add.png' /> -->
-					<img src='img/add_camera.png' class='add-image'/>
-					<img src='img/add_gallery.png' class='add-image'/>
-					<img src='img/play.png' />
-					<img src='img/save.png' id='save'/>
-					<img src='img/undo.png' />
-					<img src='img/copy.png' id='copy'/>
-					<img src='img/delete.png' id='delete'/>
-					<img src='img/comments.png' id='comments' />
-					<img src='img/tag.png' />
-				</div>
-			</div>
-			<div class='start-story'>
-				<img class='big-thumbnail' src=''/>
-				<div class='btn-custom ' id='play-story'>Play &nbsp;&nbsp;<img src='img/play.png' /></div>
-				<a href='/avaz-project/story_tile.html'><div class='btn-custom ' id='story-tiles'>Story Tiles</div></a>
-			</div>
-			<div class='input-area'>
-				<label for='story-title'>Story Name </label>
-				<input id='story-title' placeholder='Story Name' x-webkit-speech>
-				<label for='story-desc'>Story Description </label>
-				<textarea  id='story-desc' placeholder="Story Description"></textarea>
-				<label for='story-tags'>Story Tags </label>
-				<input type="text" id='story-tags' placeholder='Story Tags' x-webkit-speech>
-				<label for='students'>Students </label>
-				<input type="text" id='students' placeholder='Students' x-webkit-speech>
-			</div>
-			
-		</div>
+<div class='container'>
+	<div class='right-icons'>
+		<a href='/avaz-project/app_home_screen.html'>
+			<img src='img/home.png' class='home'/>
+		</a>
+		<img src='img/help.png' class='settings'/>
 	</div>
-	<script type="text/javascript" src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'></script>
-	<script type="text/javascript" src='js/story_home_page.js'></script>
+	<div class='main-section'>
+		<div class='loading-icon'><img src='img/loading.gif'/></div>
+
+
+		<div class='toolbar'>
+			<div class='toolbar-content'>
+				<!--<img src='img/add.png' />
+				-->
+				<img src='img/add_camera.png' class='add-image'/>
+				<img src='img/add_gallery.png' class='add-image'/>
+				<img src='img/play.png' />
+				<img src='img/save.png' id='save'/>
+				<img src='img/undo.png' />
+				<img src='img/copy.png' id='copy'/>
+				<img src='img/delete.png' id='delete'/>
+				<img src='img/comments.png' id='comments' />
+				<img src='img/tag.png' />
+				<img src='img/off.png' id='off'/>
+			</div>
+		</div>
+		<div class='start-story'>
+			<img class='big-thumbnail' src=''/>
+			<div class='btn-custom ' id='play-story'>
+				<a href='/avaz-project/story_play_initial_state.html'>Play &nbsp;&nbsp;</a>
+				<img src='img/play.png' />
+			</div>
+			<a href='/avaz-project/story_tile.html'>
+				<div class='btn-custom ' id='story-tiles'>Story Tiles</div>
+			</a>
+		</div>
+		<div class='input-area'>
+			<label for='story-title'>Story Name</label>
+			<input id='story-title' placeholder='E.g. Vegetables I love' x-webkit-speech>
+			<div class='autocomplete' autocomplete-for='story-title'></div>
+			<label for='story-desc'>Story Description</label>
+			<textarea  id='story-desc' placeholder="The story is about.."></textarea>
+			<label for='story-tags'>Story Tags</label>
+			<input type="text" id='story-tags' placeholder='friends, school, food,' x-webkit-speech>
+			<label for='students'>Storytellers</label>
+			<input type="text" id='students' placeholder='Jack, Donna...' x-webkit-speech>
+			<div class='autocomplete' autocomplete-for='students'></div>
+		</div>
+		<div class='selected-students-container'>	</div>
+
+	</div>
+</div>
+<script type="text/javascript" src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'></script>
+<script type="text/javascript" src='js/util.js'></script>
+<script type="text/javascript" src='js/story_home_page.js'></script>
 </body>
 </html>
