--- a/story_home_page_new_story.html
+++ b/story_home_page_new_story.html
@@ -12,7 +12,7 @@
 		top:100px;
 		left:180px;
 		text-align: center;
-		border: 1px solid black;
+		border: 1px solid #999;
 	}
 	.container{
 		position: relative;
