Changes to student selection and few styling bugs

--- a/story_home_page.html
+++ b/story_home_page.html
@@ -206,7 +206,7 @@
 		<div class='start-story'>
 			<img class='big-thumbnail' src=''/>
 			<div class='btn-custom ' id='play-story'>
-				<a href='/avaz-project/story_play_initial_state.html'>Play &nbsp;&nbsp;</a>
+				<a href='javascript:void(0)'>Play &nbsp;&nbsp;</a>
 				<img src='img/play.png' />
 			</div>
 			<a href='/avaz-project/story_tile.html'>
