--- a/story_tile.html
+++ b/story_tile.html
@@ -135,14 +135,14 @@
 			<div class='canvas'>
 				<img src=''/>
 				<div class='input-area'>
-					<textarea class='left' id='question' placeholder="Question.."></textarea>
+					<textarea class='left' id='question' placeholder="Type a Question here.."></textarea>
 					<input type="text" id='question-mike' class='left' x-webkit-speech>
-					<textarea class='left' id='answer' placeholder="Answer.."></textarea>
+					<textarea class='left' id='answer' placeholder="A suggested answer.."></textarea>
 					<input type="text" id='answer-mike' class='left' x-webkit-speech>
-					<textarea class='left' id='prompt' placeholder="Prompt.."></textarea>
+					<textarea class='left' id='prompt' placeholder="Prompt for the Storyteller.."></textarea>
 					<input type="text" id='prompt-mike' class='left' x-webkit-speech>
 				</div>
-				<div contenteditable='true' id='canvas-area'>
+				<div contenteditable='true' id='canvas-area' placeholder='You can take down notes here'>
 					Notes:
 				</div>
 				
